--- a/src/components/UserAuthentication/UserAuthentication.css
+++ b/src/components/UserAuthentication/UserAuthentication.css
@@ -1,10 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis:300|Lato:300,400,600,700|Roboto+Condensed:300,700|Open+Sans+Condensed:300,600|Open+Sans:400,300,600,700|Maven+Pro:400,700);
 
-a {
+/* aa {
   color: #BBB;
-}
+} */
 
-.content:before {
+/* .contenta:before {
   content: "";
   position: fixed;
   left: 0;
@@ -13,9 +13,10 @@ a {
   bottom: 0;
   z-index: -1;
   display: block;
-  background-color: black;
-  background-image: url("https://stmed.net/sites/default/files/landscape-wallpapers-27931-9892581.jpg");
-  width: 100%;
+  background-color: #ecf0f1; */
+  /* background-color: #ADD8E6; */
+  /* background-image: url("https://stmed.net/sites/default/files/landscape-wallpapers-27931-9892581.jpg"); */
+  /* width: 100%;
   height: 100%;
   background-size: cover;
   -webkit-filter: blur(2px);
@@ -23,13 +24,13 @@ a {
   -o-filter: blur(2px);
   -ms-filter: blur(2px);
   filter: blur(2px);
-}
+} */
 
 .content {
   -webkit-box-sizing: border-box;
   font-family: "Open Sans";
   font-size: 16px;
-  color: White;
+  /* color: White; */
   font-smoothing: antialiased;
   font-weight: 600;
   position: absolute;
@@ -39,20 +40,28 @@ a {
   right: 0;
   width: 540px;
   height: 540px;
-  background-color: rgba(109, 102, 102, 0.5);  margin: auto auto;
+  background-color: rgba(109, 102, 102, 0.5); 
+   margin: auto auto;
   padding: 40px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
+  /* -moz-border-radius: 4px;
+  -webkit-border-radius: 4px; */
+  /* border-radius: 4px; */
   -moz-box-shadow: 0 0 10px black;
   -webkit-box-shadow: 0 0 10px black;
   box-shadow: 0 0 10px black;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-content: center; */
+  align-items: center;
 }
 .content .title {
   text-align: center;
-  font-size: 2.0rem;
+  font-size: 40px;
+  /* 2.0rem; */
   font-weight: 600;
   padding-bottom: 30px;
+  /* flex:2; */
 }
 .content input {
   width: 100%;
@@ -64,6 +73,7 @@ a {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+  /* flex:1; */
 }
 .content input[type=checkbox] {
   display: none;
@@ -106,24 +116,29 @@ a {
   font-size: 0.9rem;
 }
 .content button {
-  width: 100%;
+  width: 50%;
+  height: 60px;
   font-size: 1.1rem;
-  padding: 10px;
+  padding: 20px;
   margin: 20px 0px;
-  background-color: rgb(53, 125, 184);
-  color: White;
+  background-color: #8fcadd;
+  /* #ADD8E6; */
+  /* rgb(53, 125, 184); */
+  /* color: White; */
   border: none;
-  -moz-border-radius: 4px;
+  /* -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
-  border-radius: 4px;
+  border-radius: 4px; */
+  cursor: pointer;
+  /* flex:1; */
 }
-.content .social {
+/* .content .social {
   width: 100%;
   position: relative;
   overflow: hidden;
   text-align: center;
-}
-.content .social span {
+} */
+/* .content .social span {
   display: inline-block;
   vertical-align: baseline;
   padding: 0 20px;
@@ -135,34 +150,26 @@ a {
   position: absolute;
   top: 0.9em;
   border-top: 1px solid White;
-}
-.content .social span:before {
+} */
+/* .content .social span:before {
   right: 75%;
 }
 .content .social span:after {
   left: 75%;
-}
-.content .buttons {
+} */
+/* .content .buttons {
   width: 100%;
   margin: 30px 0px;
-}
-.content .buttons button {
-  float: left;
-  width: 30%;
+} */
+/* .content .buttons button { */
+  /* float: left; */
+  /* width: 30%;
   margin: 0px 1.5%;
-}
-.content .buttons button i {
+} */
+/* .content .buttons button i {
   padding-right: 7px;
 }
-.content .buttons button.facebook {
-  background-color: #4464B2;
-}
-.content .buttons button.twitter {
-  background-color: #28A9E0;
-}
-.content .buttons button.google {
-  background-color: #DA4735;
-}
+
 .content .buttons:after {
   content: "";
   display: block;
@@ -171,4 +178,4 @@ a {
 .content .already {
   text-align: center;
   font-size: 0.9rem;
-}
+} */
