--- a/src/components/UsersSearch/UsersSearch.css
+++ b/src/components/UsersSearch/UsersSearch.css
@@ -1,7 +1,8 @@
 .headLeft-section{
 	width: calc(30% - 1px);
 	border-right:1px solid #E6E6E6;
-	background-color: #ADD8E6;
+	background-color:#c7ecee;
+	 /* #ADD8E6; */
 }
 
 .search{
