re-arange chat manager components

--- a/src/components/ChatManager/ChatManager.css
+++ b/src/components/ChatManager/ChatManager.css
@@ -1,3 +1,52 @@
+:root {
+	--top-component-size:70px;
+
+  }
+.chat-manager{
+	display: flex;
+	height: 100vh;
+	font-family: 'Raleway', sans-serif;
+}
+.left-side{
+	background-color: #52E2A7;
+	flex:1;
+	display: flex;
+	flex-direction: column;
+}
+.right-side{
+	background-color: #F6F6F6;;	
+	flex:3;
+	display: flex;
+	flex-direction: column;
+}
+
+.users-search{
+	background-color: darkmagenta;
+	height: var(--top-component-size);
+}
+.users-list{
+	/* background-color: pink; */
+	flex:1;
+}
+
+.message-head{
+	height: var(--top-component-size);
+	display: flex;
+	border-bottom:1px solid #E6E6E6;
+
+}
+.message-list{
+	flex:1;
+	/* display: flex; */
+	/* flex-direction: column; */
+}
+.input-text{
+	height: 60px;
+display: flex;
+}
+
+
+
 .main-section small{
 font-size: 12px;
 }
@@ -19,15 +68,8 @@ border-bottom:1px solid #E6E6E6;
 clear: both;
 overflow: hidden;
 width: 100%;
-/* border-radius: 8px; */
 }
-.headLeft-section{
-width: calc(30% - 1px);
-float: left;
-border-right:1px solid #E6E6E6;
-/* border-radius: 8px; */
 
-}
 .headLeft-sub{
 padding: 15px;
 text-align: center;
@@ -61,23 +103,22 @@ flex-direction: row;
 flex:1;
 }
 
-.left-section{
-width: calc(30% - 1px);
+.users-list{
 border-right:1px solid #E6E6E6;
 background-color: #FFF;
 overflow-y: auto;
 }
 
-.left-section ul{
+.users-list ul{
 padding: 0px;
 margin: 0px;
 list-style: none;
 }
-.left-section ul li{
-padding: 15px 0px;
+.users-list ul li{
+padding: 5px 0px;
 cursor: pointer;
 }
-.left-section ul li.active{
+.users-list ul li.active{
 background: #009EF7;
 color: #fff;
 position: relative;
@@ -85,45 +126,24 @@ position: relative;
 .mCustomScrollBox, .mCSB_container{
 overflow: unset !important;
 }
-.left-section ul li.active .desc .time{
+.users-list ul li.active .desc .time{
 color: #fff;
 }
-.left-section ul li.active:before{
-position: absolute;
-content: '';
-right: -10px;
-border:5px solid #009EF7;
-top: 0px;
-bottom: 0px;
-border-radius: 0px 3px 3px 0px;
-}
-.left-section ul li.active:after{
-position: absolute;
-content: "";
-bottom: 0px;
-right: 0px;
-left: auto;
-width: 100%;
-top: 0px;
--webkit-box-shadow: -8px 4px 10px #a1a1a1;
--moz-box-shadow: -8px 4px 10px #a1a1a1;
-box-shadow: -8px 4px 10px #a1a1a1;
-}
 
-.left-section .chatList{
+.users-list .chatList{
 overflow: hidden;
 }
-.left-section .chatList .img{
+.users-list .chatList .img{
 width: 60px;
 float: left;
 text-align: center;
 position: relative;
 }
-.left-section .chatList .img img{
+.users-list .chatList .img img{
 width: 30px;
 border-radius: 50%;
 }
-.left-section .chatList .img i{
+.users-list .chatList .img i{
 position: absolute;
 font-size: 10px;
 color: #52E2A7;
@@ -131,20 +151,21 @@ border:1px solid #fff;
 border-radius: 50%;
 left: 10px;
 }
-.left-section .chatList .desc{
+.users-list .chatList .desc{
 width: calc(100% - 60px);
 float: left;
 position: relative;
 }
-.left-section .chatList .desc h5{
+.users-list .chatList .desc h5{
 margin-top: 6px;
 line-height: 5px;
 }
-.left-section .chatList .desc .time{
+.users-list .chatList .desc .time{
 position: absolute;
 right: 15px;
 color: #c1c1c1;
 }
+
 .right-section{
 width: 70%;
 float: left;
