--- a/src/components/UsersList/UserBox/UserBox.css
+++ b/src/components/UsersList/UserBox/UserBox.css
@@ -1,91 +1,22 @@
-.left-section ul{
-	padding: 0px;
-	margin: 0px;
-	list-style: none;
+.userBox{
+	display: flex;
+	align-items: center;
 }
 
-.left-section ul li{
-	padding: 15px 0px;
-	cursor: pointer;
+.user-name{
+	flex:1;
 }
-
-.left-section ul li.active{
-	background: #009EF7;
-	color: #fff;
-	position: relative;
-}
-
-.left-section ul li.newMessage{
-	background: #7FFF00;
-	color: #7FFF00;
-	position: relative;
-}
-.left-section ul li.newMessage .desc .time{
-	color: #fff;
-}
-.left-section ul li.newMessage:before{
-	position: absolute;
-	content: '';
-	right: -10px;
-	border:5px solid #009EF7;
-	top: 0px;
-	bottom: 0px;
-	border-radius: 0px 3px 3px 0px;
-}
-.left-section ul li.newMessage:after{
-  position: absolute;
-  content: "";
-  bottom: 0px;
-  right: 0px;
-  left: auto;
-  width: 100%;
-  top: 0px;
-  -webkit-box-shadow: -8px 4px 10px #a1a1a1;
-  -moz-box-shadow: -8px 4px 10px #a1a1a1;
-  box-shadow: -8px 4px 10px #a1a1a1;
-}
-.mCustomScrollBox, .mCSB_container{
-	overflow: unset !important;
-}
-.left-section ul li.active .desc .time{
-	color: #fff;
-}
-.left-section ul li.active:before{
-	position: absolute;
-	content: '';
-	right: -10px;
-	border:5px solid #009EF7;
-	top: 0px;
-	bottom: 0px;
-	border-radius: 0px 3px 3px 0px;
-}
-.left-section ul li.active:after{
-  position: absolute;
-  content: "";
-  bottom: 0px;
-  right: 0px;
-  left: auto;
-  width: 100%;
-  top: 0px;
-  -webkit-box-shadow: -8px 4px 10px #a1a1a1;
-  -moz-box-shadow: -8px 4px 10px #a1a1a1;
-  box-shadow: -8px 4px 10px #a1a1a1;
-}
-
-.left-section .userBox{
-	overflow: hidden;
-}
-.left-section .userBox .img{
+.users-list .userBox .img{
 	width: 60px;
 	float: left;
 	text-align: center;
 	position: relative;
 }
-.left-section .userBox .img img{
+.users-list .userBox .img img{
 	width: 40px;
 	border-radius: 50%;
 }
-.left-section .userBox .img i{
+.users-list .userBox .img i{
 	position: absolute;
 	font-size: 10px;
 	color: #52E2A7;
@@ -93,34 +24,9 @@
 	border-radius: 50%;
 	left: 10px;
 }
-.left-section .userBox .desc{
-	width: calc(100% - 60px);
-	float: left;
-	position: relative;
-}
-.left-section .userBox .desc h5{
-	margin-top: 6px;
-	color: #000000;
-	font-size: 15px;
-}
 
-.left-section .userBox .desc .time{
-	position: absolute;
-	right: 15px;
-	color: #c1c1c1;
-}
-
-
-.outer {
-  align-items: center;
-  display: flex;
-  height: 20px;
-  justify-content: center;
-  max-width: 10%;
-  overflow: auto;
-  resize:both;
-  right: 90px;
-  position: absolute;
+.mCustomScrollBox, .mCSB_container{
+	overflow: unset !important;
 }
 
 svg {
