--- a/src/components/UsersSearch/UsersSearch.css
+++ b/src/components/UsersSearch/UsersSearch.css
@@ -1,8 +1,7 @@
 .headLeft-section{
-	width: calc(30% - 1px);
 	border-right:1px solid #E6E6E6;
-	background-color:#c7ecee;
-	 /* #ADD8E6; */
+	background-color:#E8E8E8;
+	height: 100%;
 }
 
 .search{
@@ -29,7 +28,6 @@
 	border:1px solid #E6E6E6;
 	padding: 7px 15px;
 	border-radius: 8px;
-
 }
 
 .headLeft-info{
@@ -46,7 +44,6 @@
 .headLeft-info button{
 	padding: 7px 15px;
 	border-radius: 8px;
-
 }
 
 .bar-btn button{
