--- a/src/components/UserAuthentication/UserAuthentication.css
+++ b/src/components/UserAuthentication/UserAuthentication.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis:300|Lato:300,400,600,700|Roboto+Condensed:300,700|Open+Sans+Condensed:300,600|Open+Sans:400,300,600,700|Maven+Pro:400,700);
 :root {
-  --main-light-color:#c7ecee;
+  --main-light-color:#e3e3e3;
+  /* #c7ecee; */
   --active-color:  #009EF7 ;
   --hover-color:#1399e4;
 }
@@ -113,7 +114,8 @@ margin-top: 0px;
   flex:1;
   font-size: 20px;
   padding: 20px;
-  background-color:var(--main-light-color);;
+  background-color:#cccccc;
+  /* var(--main-light-color);; */
   border: none;
   cursor: pointer;
   text-align: center;
@@ -132,4 +134,9 @@ margin-top: 0px;
   left:180px;
   width: 180px;
   font-size: 20px;
+}
+
+a{
+  text-decoration:none; 
+  color:black;
 }
