--- a/src/components/MessageList/MessageList.css
+++ b/src/components/MessageList/MessageList.css
@@ -128,3 +128,10 @@
 	left: 50%;
 	transform: translateX(-50%);
 }
+
+#pick-room-msg{
+	margin-top: 100px;
+	text-align: center;
+	font-size: 20px;
+	font-family: 'Raleway', sans-serif;
+}
