--- a/src/components/MessageList/MessageList.css
+++ b/src/components/MessageList/MessageList.css
@@ -34,7 +34,7 @@
 
 .message{
 	height: calc(100% - 68px);
-	font-family: sans-serif;
+	/* font-family: sans-serif; */
   overflow-y: auto;
 }
 .message ul{
