--- a/src/components/UserAuthentication/UserAuthentication.css
+++ b/src/components/UserAuthentication/UserAuthentication.css
@@ -1,7 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis:300|Lato:300,400,600,700|Roboto+Condensed:300,700|Open+Sans+Condensed:300,600|Open+Sans:400,300,600,700|Maven+Pro:400,700);
 :root {
   --main-light-color:#e3e3e3;
-  /* #c7ecee; */
   --active-color:  #009EF7 ;
   --hover-color:#1399e4;
 }
@@ -13,9 +12,7 @@
 
 .content {
   -webkit-box-sizing: border-box;
-  /* font-family: "Open Sans"; */
 	font-family: 'Raleway', sans-serif;
-
   font-size: 16px;
   font-smoothing: antialiased;
   font-weight: 600;
@@ -119,7 +116,6 @@ margin-top: 0px;
   font-size: 20px;
   padding: 20px;
   background-color:#cccccc;
-  /* var(--main-light-color);; */
   border: none;
   cursor: pointer;
   text-align: center;
@@ -145,4 +141,10 @@ margin-top: 0px;
 a{
   text-decoration:none; 
   color:black;
+}
+
+#error{
+  border-style: solid;
+  border-width: 1px;
+  border-color: red;
 }
